Copy/paste and refactoring of search select fields
In this commit, the two jQuery plugins AplusSearchSelect and
AplusSearchSelectAjax have been refactored to share code with each other
and implement a Django widget with its own HTML template. In addition,
copy and paste functionality has been added to these fields.

--- a/exercise/templates/exercise/staff/edit_submitters.html
+++ b/exercise/templates/exercise/staff/edit_submitters.html
@@ -47,12 +47,11 @@
 
 {% block scripts %}
 {{ block.super }}
-<script src="{% static 'js/ajax_search_select.js' %}"></script>
 <script>
 $(function() {
   $('#group-select a.select').on('click', function(event) {
     event.preventDefault();
-    $('select.search-select-ajax').aplusSearchSelectAjax(
+    $('.search-select-ajax').aplusSearchSelectAjax(
       {},
       $(this).attr("data-profiles").split(",").slice(0,-1)
     );
