--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -71,6 +71,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/overlay';
 @import 'components/pagination';
 @import 'components/resize';
+@import 'components/ajax-search-select';
 @import 'components/sidebar';
 @import 'pages/assessment';
 @import 'pages/login';
