--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -22,7 +22,7 @@
 	<div class="panel-heading">
 		<h3 class="panel-title">{% translate "DEADLINE_DEVIATIONS" %}</h3>
 	</div>
-	<table class="table table-striped table-bordered table-condensed filtered-table ordered-table">
+	<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table">
 		<thead>
 			<tr>
 				<th>{% translate "SUBMITTER" %}</th>
@@ -42,8 +42,35 @@
 		</thead>
 		<tbody>
 			{% translate "UNKNOWN" as unknown %}
+			{% for deviations, can_group, group_id in deviation_groups %}
+			{% if can_group %}
+			<tr data-group-parent="{{ group_id }}">
+				<td>{{ deviations.0.submitter }}</td>
+				<td>
+					{{ deviations.0.exercise.course_module }}
+					<strong>
+						({% blocktranslate trimmed with count=deviations|length %}
+						NUM_OF_EXERCISES -- {{ count }}
+						{% endblocktranslate %})
+					</strong>
+				</td>
+				<td>{{ deviations.0.extra_minutes }}</td>
+				<td>
+					{% if deviations.0.without_late_penalty %}
+						<span class="glyphicon glyphicon-ok"></span>
+						{% translate "YES" %}
+					{% else %}
+						<span class="glyphicon glyphicon-remove"></span>
+						{% translate "NO" %}
+					{% endif %}
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			{% endif %}
 			{% for deviation in deviations %}
-			<tr>
+			<tr {% if can_group %}data-group-child="{{ group_id }}" class="hidden-group info"{% endif %}>
 				<td>{{ deviation.submitter }}</td>
 				<td>{{ deviation.exercise }}</td>
 				<td>{{ deviation.extra_minutes }}</td>
@@ -72,9 +99,10 @@
 					</form>
 				</td>
 			</tr>
+			{% endfor %}
 			{% empty %}
 			<tr>
-				<td colspan="4">{% translate "NO_DEADLINE_DEVIATIONS" %}</td>
+				<td colspan="7">{% translate "NO_DEADLINE_DEVIATIONS" %}</td>
 			</tr>
 			{% endfor %}
 		</tbody>
