--- a/assets/sass/components/_table.scss
+++ b/assets/sass/components/_table.scss
@@ -2,7 +2,7 @@ table {
 	// There are two separate classes for hiding rows in the table, because
 	// there are two reasons a row might be hidden: filtering and grouping.
 	// Having separate classes makes it easier to toggle these states
-	// separately in Javascript code (see filter.js).
+	// separately in Javascript code (see table.js).
 	&.filtered-table .hidden-filter {
 		display: none !important;
 	}
