--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 	<link data-translation rel="preload" as="fetch" crossorigin="anonymous"
 		type="application/json, text/javascript, */*; q=0.01" hreflang="fi"
 		href="{{ STATIC_URL }}js-translations/teacher.fi.json">
-	<script src="{% static 'js/filter.js' %}"></script>
+	<script src="{% static 'js/table.js' %}"></script>
 	{% endif %}
 	<link data-translation rel="preload" as="fetch" crossorigin="anonymous"
 		type="application/json, text/javascript, */*; q=0.01" hreflang="fi"
