Fix incorrect information in the official points tooltip
This tooltip is used in the All results table (course points page).

--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -95,6 +95,7 @@
 			<h4>{% translate "OPTIONS" %}</h4>
 			<span class="has-error">
 				<label style="margin-left: 10px;" class="checkbox-inline" data-toggle="tooltip"
+				data-placement="right"
 				title="{% translate 'OFFICIAL_POINTS_TOOLTIP' %}">
 					<input type="checkbox" class="official-checkbox" value="official" checked>
 					{% translate "RESULTS_SHOW_ONLY_OFFICIAL_POINTS" %}
