Clarifying the Final label in Inspect submissions view
The Final label is used in Inspect submissions' submission list
also for submissions that are not marked as final. This modification
uses a different label when Final is not appropriate. It also
clarifies whether the best or last submission is chosen for grading.

--- a/exercise/templates/exercise/staff/_submissions_table_compact.html
+++ b/exercise/templates/exercise/staff/_submissions_table_compact.html
@@ -56,11 +56,19 @@
 				</span>
 
 				{% if s == summary.best_submission %}
-				<span
-					class="label label-primary"
-					data-toggle="tooltip"
-					title="{% translate 'SUBMISSION_FINAL_TOOLTIP' %}"
-				>{% translate 'FINAL' %}</span>
+					{% if s.force_exercise_points %}
+					<span
+						class="label label-primary"
+						data-toggle="tooltip"
+						title="{% translate 'SUBMISSION_FINAL_TOOLTIP' %}"
+					>{% translate 'FINAL' %}</span>
+					{% else %}
+					<span
+						class="glyphicon glyphicon-star"
+						data-toggle="tooltip"
+						title="{% translate 'SUBMISSION_CHOSEN_TOOLTIP' %}"
+					></span>
+					{% endif %}
 				{% endif %}
 				{% if s.grader %}
 				<span
