--- a/deviations/templates/deviations/add_dl.html
+++ b/deviations/templates/deviations/add_dl.html
@@ -1,28 +1,29 @@
-{% extends "edit_course/edit_course_base.html" %}
+{% extends "course/course_base.html" %}
 {% load i18n %}
 {% load course %}
 {% load bootstrap %}
 
-{% block edittitle %}{% translate "ADD_DEADLINE_DEVIATIONS" %}{% endblock %}
-{% block view_tag %}edit-course,deviations{% endblock %}
+{% block title %}{% translate "ADD_DEADLINE_DEVIATIONS" %} | {{ block.super }}{% endblock %}
+{% block view_tag %}deadline-deviations{% endblock %}
 
-{% block editbreadcrumblist %}
+{% block breadcrumblist %}
 {{ block.super }}
 <li><a href="{{ instance|url:'deviations-list-dl' }}">{% translate "LIST_DEADLINE_DEVIATIONS" %}</a></li>
 <li class="active">{% translate "ADD_NEW_DEADLINE_DEVIATIONS" %}</li>
 {% endblock %}
 
-{% block coursecontent %}
-<br/>
-<form method="post" class="well form-horizontal">
-	{% csrf_token %}
-	<legend>{% translate "ADD_DEADLINE_DEVIATIONS" %}</legend>
-	{{ form|bootstrap_horizontal }}
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
-			<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
-			<a href="{{ instance|url:'deviations-list-dl' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
+{% block columns %}
+<div class="col-md-12">
+	<form method="post" class="well form-horizontal">
+		{% csrf_token %}
+		<legend>{% translate "ADD_DEADLINE_DEVIATIONS" %}</legend>
+		{{ form|bootstrap_horizontal }}
+		<div class="form-group">
+			<div class="col-sm-10 col-sm-offset-2">
+				<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
+				<a href="{{ instance|url:'deviations-list-dl' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
+			</div>
 		</div>
-	</div>
-</form>
+	</form>
+</div>
 {% endblock %}
