--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -1,143 +1,144 @@
-{% extends "edit_course/edit_course_base.html" %}
+{% extends "course/course_base.html" %}
 {% load i18n %}
 {% load course %}
 {% load static %}
 
-{% block edittitle %}{% translate "LIST_DEADLINE_DEVIATIONS" %}{% endblock %}
-{% block view_tag %}edit-course,deviations{% endblock %}
+{% block title %}{% translate "LIST_DEADLINE_DEVIATIONS" %} | {{ block.super }}{% endblock %}
+{% block view_tag %}deadline-deviations{% endblock %}
 
-{% block editbreadcrumblist %}
+{% block breadcrumblist %}
 {{ block.super }}
 <li class="active">{% translate "LIST_DEADLINE_DEVIATIONS" %}</li>
 {% endblock %}
 
-{% block coursecontent %}
-<br />
-<p>
-	<a class="aplus-button--default aplus-button--xs" role="button" href="{{ instance|url:'deviations-add-dl' }}">
-		<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
-		{% translate "ADD_NEW_DEADLINE_DEVIATIONS" %}
-	</a>
-	<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-remove-dl' }}">
-		<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
-		{% translate "REMOVE_DEADLINE_DEVIATIONS" %}
-	</a>
-	<a class="aplus-button--danger aplus-button--xs pull-right" id="remove-selected-button" data-toggle="modal" data-target="#remove-selected-modal" role="button">
-		<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
-		{% translate "REMOVE_SELECTED_DEVIATIONS" %}
-	</a>
-</p>
-<form method="post" class="form-horizontal">
-	{% csrf_token %}
-	<div class="panel panel-primary">
-		<div class="panel-heading">
-			<h3 class="panel-title">{% translate "DEADLINE_DEVIATIONS" %}</h3>
+{% block columns %}
+<div class="col-md-12">
+	<p>
+		<a class="aplus-button--default aplus-button--xs" role="button" href="{{ instance|url:'deviations-add-dl' }}">
+			<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+			{% translate "ADD_NEW_DEADLINE_DEVIATIONS" %}
+		</a>
+		<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-remove-dl' }}">
+			<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+			{% translate "REMOVE_DEADLINE_DEVIATIONS" %}
+		</a>
+		<a class="aplus-button--danger aplus-button--xs pull-right" id="remove-selected-button" data-toggle="modal" data-target="#remove-selected-modal" role="button">
+			<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+			{% translate "REMOVE_SELECTED_DEVIATIONS" %}
+		</a>
+	</p>
+	<form method="post" class="form-horizontal">
+		{% csrf_token %}
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h3 class="panel-title">{% translate "DEADLINE_DEVIATIONS" %}</h3>
+			</div>
+			<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table">
+				<thead>
+					<tr>
+						<th>{% translate "SUBMITTER" %}</th>
+						<th>{% translate "EXERCISE" %}</th>
+						<th>{% translate "EXTRA_MINUTES" %}</th>
+						<th>{% translate "DEADLINE" %}</th>
+						<th
+							data-filter-type="options"
+							data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
+							data-order-disable="true"
+						>
+							{% translate "WITHOUT_LATE_PENALTY" %}
+						</th>
+						<th>{% translate "GRANTER" %}</th>
+						<th>{% translate "GRANT_TIME" %}</th>
+						<th data-filter-type="none" data-order-disable="true" data-group-checkbox="true">{% translate "SELECT" %}</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% translate "UNKNOWN" as unknown %}
+					{% for deviations, can_group, group_id in deviation_groups %}
+					{% if can_group %}
+					<tr data-group-parent="{{ group_id }}">
+						<td>
+							<a href="{{ deviations.0.submitter|url:instance }}">
+								{{ deviations.0.submitter.name_with_student_id }}
+							</a>
+						</td>
+						<td>
+							{{ deviations.0.exercise.course_module }}
+							<strong>
+								({% blocktranslate trimmed with count=deviations|length %}
+								NUM_OF_EXERCISES -- {{ count }}
+								{% endblocktranslate %})
+							</strong>
+						</td>
+						<td>{{ deviations.0.extra_minutes }}</td>
+						<td data-datetime="{{ deviations.0.get_new_deadline|date:'Y-m-d H:i:s' }}">
+							{{ deviations.0.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
+						</td>
+						<td>
+							{% if deviations.0.without_late_penalty %}
+								<span class="glyphicon glyphicon-ok"></span>
+								{% translate "YES" %}
+							{% else %}
+								<span class="glyphicon glyphicon-remove"></span>
+								{% translate "NO" %}
+							{% endif %}
+						</td>
+						<td></td>
+						<td></td>
+						<td>
+							<input type="checkbox">
+						</td>
+					</tr>
+					{% endif %}
+					{% for deviation in deviations %}
+					<tr {% if can_group %}data-group-child="{{ group_id }}" class="hidden-group info"{% endif %}>
+						<td>
+							<a href="{{ deviation.submitter|url:instance }}">
+								{{ deviation.submitter.name_with_student_id }}
+							</a>
+						</td>
+						<td>{{ deviation.exercise }}</td>
+						<td>{{ deviation.extra_minutes }}</td>
+						<td data-datetime="{{ deviation.get_new_deadline|date:'Y-m-d H:i:s' }}">
+							{{ deviation.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
+						</td>
+						<td>
+							{% if deviation.without_late_penalty %}
+								<span class="glyphicon glyphicon-ok"></span>
+								{% translate "YES" %}
+							{% else %}
+								<span class="glyphicon glyphicon-remove"></span>
+								{% translate "NO" %}
+							{% endif %}
+						</td>
+						<td>
+							{% if deviation.granter %}
+							{{ deviation.granter.name_with_student_id }}
+							{% else %}
+							{{ unknown }}
+							{% endif %}
+						</td>
+						<td data-datetime="{{ deviation.grant_time|date:'Y-m-d H:i:s' }}">
+							{% if deviation.grant_time %}
+							{{ deviation.grant_time|date:'SHORT_DATETIME_FORMAT' }}
+							{% else %}
+							{{ unknown }}
+							{% endif %}
+						</td>
+						<td>
+							<input type="checkbox" name="id" value="{{ deviation.id }}">
+						</td>
+					</tr>
+					{% endfor %}
+					{% empty %}
+					<tr>
+						<td colspan="8">{% translate "NO_DEADLINE_DEVIATIONS" %}</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 		</div>
-		<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table">
-			<thead>
-				<tr>
-					<th>{% translate "SUBMITTER" %}</th>
-					<th>{% translate "EXERCISE" %}</th>
-					<th>{% translate "EXTRA_MINUTES" %}</th>
-					<th>{% translate "DEADLINE" %}</th>
-					<th
-						data-filter-type="options"
-						data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
-						data-order-disable="true"
-					>
-						{% translate "WITHOUT_LATE_PENALTY" %}
-					</th>
-					<th>{% translate "GRANTER" %}</th>
-					<th>{% translate "GRANT_TIME" %}</th>
-					<th data-filter-type="none" data-order-disable="true" data-group-checkbox="true">{% translate "SELECT" %}</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% translate "UNKNOWN" as unknown %}
-				{% for deviations, can_group, group_id in deviation_groups %}
-				{% if can_group %}
-				<tr data-group-parent="{{ group_id }}">
-					<td>
-						<a href="{{ deviations.0.submitter|url:instance }}">
-							{{ deviations.0.submitter.name_with_student_id }}
-						</a>
-					</td>
-					<td>
-						{{ deviations.0.exercise.course_module }}
-						<strong>
-							({% blocktranslate trimmed with count=deviations|length %}
-							NUM_OF_EXERCISES -- {{ count }}
-							{% endblocktranslate %})
-						</strong>
-					</td>
-					<td>{{ deviations.0.extra_minutes }}</td>
-					<td data-datetime="{{ deviations.0.get_new_deadline|date:'Y-m-d H:i:s' }}">
-						{{ deviations.0.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
-					</td>
-					<td>
-						{% if deviations.0.without_late_penalty %}
-							<span class="glyphicon glyphicon-ok"></span>
-							{% translate "YES" %}
-						{% else %}
-							<span class="glyphicon glyphicon-remove"></span>
-							{% translate "NO" %}
-						{% endif %}
-					</td>
-					<td></td>
-					<td></td>
-					<td>
-						<input type="checkbox">
-					</td>
-				</tr>
-				{% endif %}
-				{% for deviation in deviations %}
-				<tr {% if can_group %}data-group-child="{{ group_id }}" class="hidden-group info"{% endif %}>
-					<td>
-						<a href="{{ deviation.submitter|url:instance }}">
-							{{ deviation.submitter.name_with_student_id }}
-						</a>
-					</td>
-					<td>{{ deviation.exercise }}</td>
-					<td>{{ deviation.extra_minutes }}</td>
-					<td data-datetime="{{ deviation.get_new_deadline|date:'Y-m-d H:i:s' }}">
-						{{ deviation.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
-					</td>
-					<td>
-						{% if deviation.without_late_penalty %}
-							<span class="glyphicon glyphicon-ok"></span>
-							{% translate "YES" %}
-						{% else %}
-							<span class="glyphicon glyphicon-remove"></span>
-							{% translate "NO" %}
-						{% endif %}
-					</td>
-					<td>
-						{% if deviation.granter %}
-						{{ deviation.granter.name_with_student_id }}
-						{% else %}
-						{{ unknown }}
-						{% endif %}
-					</td>
-					<td data-datetime="{{ deviation.grant_time|date:'Y-m-d H:i:s' }}">
-						{% if deviation.grant_time %}
-						{{ deviation.grant_time|date:'SHORT_DATETIME_FORMAT' }}
-						{% else %}
-						{{ unknown }}
-						{% endif %}
-					</td>
-					<td>
-						<input type="checkbox" name="id" value="{{ deviation.id }}">
-					</td>
-				</tr>
-				{% endfor %}
-				{% empty %}
-				<tr>
-					<td colspan="8">{% translate "NO_DEADLINE_DEVIATIONS" %}</td>
-				</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-	</div>
-	{% include "deviations/_remove_modal.html" with remove_url=instance|url:'deviations-remove-dl-id' %}
-</form>
+		{% include "deviations/_remove_modal.html" with remove_url=instance|url:'deviations-remove-dl-id' %}
+	</form>
+</div>
 {% endblock %}
