--- a/exercise/templates/exercise/staff/_submissions_table_compact.html
+++ b/exercise/templates/exercise/staff/_submissions_table_compact.html
@@ -80,7 +80,7 @@
 			</td>
 		</tr>
 		{% endfor %}
-		{% if summary.submission_count > highest_visible_index or lowest_visible_index > 1 %}
+		{% if submissions|length > highest_visible_index or lowest_visible_index > 1 %}
 		<tr>
 			<td colspan="5">
 				<button class="aplus-button--secondary aplus-button--xs" data-toggle="visibility" data-target=".submissions-toggle">
