Always show numbering in deviation tables
This commit changes the deviation list/override views to always display
the number of each exercise, even if numbering is disabled for the course.
This improves sorting in these tables.

Fixes #896
Fixes #902

--- a/deviations/templates/deviations/list_submissions.html
+++ b/deviations/templates/deviations/list_submissions.html
@@ -77,7 +77,7 @@
 								{{ deviation.submitter.name_with_student_id }}
 							</a>
 						</td>
-						<td>{{ deviation.exercise }}</td>
+						<td>{{ deviation.exercise.hierarchical_name }}</td>
 						<td>{{ deviation.extra_submissions }}</td>
 						<td>
 							{% if deviation.granter %}
