--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -97,7 +97,7 @@
 								{{ deviation.submitter.name_with_student_id }}
 							</a>
 						</td>
-						<td>{{ deviation.exercise }}</td>
+						<td>{{ deviation.exercise.hierarchical_name }}</td>
 						<td>{{ deviation.extra_minutes }}</td>
 						<td data-datetime="{{ deviation.get_new_deadline|date:'Y-m-d H:i:s' }}">
 							{{ deviation.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
