--- a/deviations/templates/deviations/override_submissions.html
+++ b/deviations/templates/deviations/override_submissions.html
@@ -58,7 +58,7 @@
 								{{ deviation.submitter.name_with_student_id }}
 							</a>
 						</td>
-						<td>{{ deviation.exercise }}</td>
+						<td>{{ deviation.exercise.hierarchical_name }}</td>
 						<td>{{ deviation.extra_submissions }}</td>
 						<td>{{ session_data.extra_submissions }}</td>
 						<td>
