New deviation views for handling deviations
This commit adds new views for listing, adding, overriding and deleting
deviations (deadline deviations and max submissions deviations). Now, when
the user attempts to add deviations that already exist, a deviation
override page is shown, where the user can select the deviations they wish
to override. Deviations can now be deleted by using either a deletion form
or by selecting some deviations on the list page. The same views are
available for both types of deviations.

This commit uses Vesa Ala-Laurinaho's old PR #401 as a base, with new
features developed by Sampo Kulonen.

Fixes #896
Fixes #902

Co-authored-by: Vesa Ala-Laurinaho <vesa.ala-laurinaho@aalto.fi>

--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -47,9 +47,14 @@
                 {% translate "TAGS" %}
             </a>
         </li>
-        <li role="presentation" class="menu-deviations">
+        <li role="presentation" class="menu-dl-deviations">
             <a href="{{ instance|url:'deviations-list-dl' }}">
-                {% translate "DEVIATIONS" %}
+                {% translate "DEADLINE_DEVIATIONS" %}
+            </a>
+        </li>
+        <li role="presentation" class="menu-submission-deviations">
+            <a href="{{ instance|url:'deviations-list-submissions' }}">
+                {% translate "SUBMISSION_DEVIATIONS" %}
             </a>
         </li>
         <li role="presentation" class="menu-batch-assess">
