--- a/deviations/templates/deviations/add_submissions.html
+++ b/deviations/templates/deviations/add_submissions.html
@@ -3,25 +3,25 @@
 {% load course %}
 {% load bootstrap %}
 
-{% block edittitle %}{% translate "ADD_DEADLINE_DEVIATIONS" %}{% endblock %}
+{% block edittitle %}{% translate "ADD_SUBMISSION_DEVIATIONS" %}{% endblock %}
 {% block view_tag %}edit-course,deviations{% endblock %}
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li><a href="{{ instance|url:'deviations-list-dl' }}">{% translate "LIST_DEADLINE_DEVIATIONS" %}</a></li>
-<li class="active">{% translate "ADD_NEW_DEADLINE_DEVIATIONS" %}</li>
+<li><a href="{{ instance|url:'deviations-list-submissions' }}">{% translate "LIST_SUBMISSION_DEVIATIONS" %}</a></li>
+<li class="active">{% translate "ADD_NEW_SUBMISSION_DEVIATIONS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
 <br/>
 <form method="post" class="well form-horizontal">
 	{% csrf_token %}
-	<legend>{% translate "ADD_DEADLINE_DEVIATIONS" %}</legend>
+	<legend>{% translate "ADD_SUBMISSION_DEVIATIONS" %}</legend>
 	{{ form|bootstrap_horizontal }}
 	<div class="form-group">
 		<div class="col-sm-10 col-sm-offset-2">
 			<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
-			<a href="{{ instance|url:'deviations-list-dl' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
+			<a href="{{ instance|url:'deviations-list-submissions' }}" class="aplus-button--secondary aplus-button--md">{% translate "CANCEL" %}</a>
 		</div>
 	</div>
 </form>
