--- a/deviations/templates/deviations/list_submissions.html
+++ b/deviations/templates/deviations/list_submissions.html
@@ -3,24 +3,24 @@
 {% load course %}
 {% load static %}
 
-{% block edittitle %}{% translate "LIST_DEADLINE_DEVIATIONS" %}{% endblock %}
-{% block view_tag %}edit-course,deviations{% endblock %}
+{% block edittitle %}{% translate "LIST_SUBMISSION_DEVIATIONS" %}{% endblock %}
+{% block view_tag %}edit-course,submission-deviations{% endblock %}
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "LIST_DEADLINE_DEVIATIONS" %}</li>
+<li class="active">{% translate "LIST_SUBMISSION_DEVIATIONS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
 <br />
 <p>
-	<a class="aplus-button--default aplus-button--xs" role="button" href="{{ instance|url:'deviations-add-dl' }}">
+	<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-add-submissions' }}">
 		<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
-		{% translate "ADD_NEW_DEADLINE_DEVIATIONS" %}
+		{% translate "ADD_NEW_SUBMISSION_DEVIATIONS" %}
 	</a>
-	<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-remove-dl' }}">
+	<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-remove-submissions' }}">
 		<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
-		{% translate "REMOVE_DEADLINE_DEVIATIONS" %}
+		{% translate "REMOVE_SUBMISSION_DEVIATIONS" %}
 	</a>
 	<a class="aplus-button--danger aplus-button--xs pull-right" id="remove-selected-button" data-toggle="modal" data-target="#remove-selected-modal" role="button">
 		<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
@@ -31,22 +31,14 @@
 	{% csrf_token %}
 	<div class="panel panel-primary">
 		<div class="panel-heading">
-			<h3 class="panel-title">{% translate "DEADLINE_DEVIATIONS" %}</h3>
+			<h3 class="panel-title">{% translate "SUBMISSION_DEVIATIONS" %}</h3>
 		</div>
 		<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table">
 			<thead>
 				<tr>
 					<th>{% translate "SUBMITTER" %}</th>
 					<th>{% translate "EXERCISE" %}</th>
-					<th>{% translate "EXTRA_MINUTES" %}</th>
-					<th>{% translate "DEADLINE" %}</th>
-					<th
-						data-filter-type="options"
-						data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
-						data-order-disable="true"
-					>
-						{% translate "WITHOUT_LATE_PENALTY" %}
-					</th>
+					<th>{% translate "EXTRA_SUBMISSIONS" %}</th>
 					<th>{% translate "GRANTER" %}</th>
 					<th>{% translate "GRANT_TIME" %}</th>
 					<th data-filter-type="none" data-order-disable="true" data-group-checkbox="true">{% translate "SELECT" %}</th>
@@ -70,19 +62,7 @@
 							{% endblocktranslate %})
 						</strong>
 					</td>
-					<td>{{ deviations.0.extra_minutes }}</td>
-					<td data-datetime="{{ deviations.0.get_new_deadline|date:'Y-m-d H:i:s' }}">
-						{{ deviations.0.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
-					</td>
-					<td>
-						{% if deviations.0.without_late_penalty %}
-							<span class="glyphicon glyphicon-ok"></span>
-							{% translate "YES" %}
-						{% else %}
-							<span class="glyphicon glyphicon-remove"></span>
-							{% translate "NO" %}
-						{% endif %}
-					</td>
+					<td>{{ deviations.0.extra_submissions }}</td>
 					<td></td>
 					<td></td>
 					<td>
@@ -98,19 +78,7 @@
 						</a>
 					</td>
 					<td>{{ deviation.exercise }}</td>
-					<td>{{ deviation.extra_minutes }}</td>
-					<td data-datetime="{{ deviation.get_new_deadline|date:'Y-m-d H:i:s' }}">
-						{{ deviation.get_new_deadline|date:'SHORT_DATETIME_FORMAT' }}
-					</td>
-					<td>
-						{% if deviation.without_late_penalty %}
-							<span class="glyphicon glyphicon-ok"></span>
-							{% translate "YES" %}
-						{% else %}
-							<span class="glyphicon glyphicon-remove"></span>
-							{% translate "NO" %}
-						{% endif %}
-					</td>
+					<td>{{ deviation.extra_submissions }}</td>
 					<td>
 						{% if deviation.granter %}
 						{{ deviation.granter.name_with_student_id }}
@@ -132,12 +100,12 @@
 				{% endfor %}
 				{% empty %}
 				<tr>
-					<td colspan="8">{% translate "NO_DEADLINE_DEVIATIONS" %}</td>
+					<td colspan="6">{% translate "NO_SUBMISSION_DEVIATIONS" %}</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
 	</div>
-	{% include "deviations/_remove_modal.html" with remove_url=instance|url:'deviations-remove-dl-id' %}
+	{% include "deviations/_remove_modal.html" with remove_url=instance|url:'deviations-remove-submissions-id' %}
 </form>
 {% endblock %}
