Add new duration widget
This commit adds a new "duration widget" for entering time duration using
a set of input boxes (one for days, hours and minutes) instead of entering
a single minute number.

Fixes #896
Fixes #902

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -61,6 +61,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/badge';
 @import 'components/breadcrumb';
 @import 'components/button';
+@import 'components/duration-input';
 @import 'components/error_summary';
 @import 'components/focus';
 @import 'components/frontpage-cards';
