--- a/exercise/templates/exercise/staff/inspect_submission.html
+++ b/exercise/templates/exercise/staff/inspect_submission.html
@@ -97,6 +97,7 @@
 </div>
 {% include "exercise/staff/_submission_data_modal.html" %}
 {% include "exercise/staff/_resubmit_modal.html" %}
+{% include "exercise/staff/_late_submission_approval_modal.html" %}
 {% endblock %}
 
 {% block scripts %}
