--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -80,7 +80,7 @@
 								<ul class="dropdown-menu">
 									{% for submission in submissions %}
 										<li>
-											<a href="{{ submission|url:'submission-plain' }}">
+											<a href="{{ submission|url:'submission-plain' }}" data-hash="{{ submission.meta_data.hash }}">
 												{{ forloop.revcounter }}.
 												{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
 												{% points_badge submission is_revealed=feedback_revealed %}
