Fix bugs and coding style issues in the download buttons
Commit 9e3b5b9d included some bugs and coding style issues
that are fixed in this commit.

The inspect view had two download buttons for submitted files
because assessment.js had its own, older implementation for
the download button.

The HTML class `pre-content` was unnecessary and it made
the JavaScript function `highlightCode()` less reusable since
callers of the function would have to include the HTML class in
the `pre` element.

--- a/exercise/templates/exercise/_template_files.html
+++ b/exercise/templates/exercise/_template_files.html
@@ -7,7 +7,7 @@
 			{{ entry.content|safe }}
 		{% else %}
 			<h4>{{ entry.name|parse_localization }}</h4>
-			<pre class="hljs pre-content" data-self-link="{{ exercise|url:'exercise-template' }}?name={{ entry.name }}">{{ entry.content }}</pre>
+			<pre class="hljs" data-url="{{ exercise|url:'exercise-template' }}?name={{ entry.name }}">{{ entry.content }}</pre>
 		{% endif %}
 	{% else %}
 		<h4>{{ entry.name|parse_localization }}</h4>
