Add the exercise template link to the full-view exercise page
The exercise template (skeleton code) link had been missing in
the full-view exercise pages even though the corresponding view
had been implemented a long time ago.

--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -81,6 +81,15 @@
 			</li>
 			{% endif %}
 			{% endif %}
+			{% if is_course_staff or is_student %}
+				{% if exercise.templates %}
+					<li class="menu-template">
+						<a href="{{ exercise|url:'exercise-template' }}">
+							{% translate "EXERCISE_TEMPLATE" %}
+						</a>
+					</li>
+				{% endif %}
+			{% endif %}
 			{% if is_course_staff %}
 			<li>
 					<p class="navbar-text navbar-btn">
