Fix coding style issues and clarify UI strings and code comments
This commit fixes minor issues in the previous commit.
Part of issue #918.

--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -108,9 +108,9 @@
 				{% translate "RESULTS_SHOW_ONLY_STUDENT_WITH_SUBMISSIONS" %}
 			</label>
 			<label style="margin-left: 10px;" class="checkbox-inline" data-toggle="tooltip"
-				title="{% translate 'RESULTS_SHOW_LATEST_SUBMISSION_POINTS' %}">
-				<input type="checkbox" class="latestsubs-checkbox" value="latestsubs" checked>
-				{% translate "RESULTS_SHOW_LATEST_SUBMISSION_POINTS" %}
+				title="{% translate 'RESULTS_IGNORE_GRADING_MODE_LAST_TOOLTIP' %}">
+				<input type="checkbox" id="ignore-last-mode-checkbox" value="ignorelastmode" checked autocomplete="off">
+				{% translate "RESULTS_IGNORE_GRADING_MODE_LAST" %}
 			</label>
 		</div>
 
