Clarify the batch assess instructions
Fixes #1024

--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -19,7 +19,7 @@
     </div>
     <div class="panel-body">
         {% blocktranslate trimmed with profile.id as id %}
-          BATCH_CREATE_AND_ASSESS_JSON_FORM_INSTRUCTIONS -- {{ id }}
+          BATCH_CREATE_AND_ASSESS_JSON_FORM_INSTRUCTIONS -- {{ id }}, {{ exercises_api_url }}
         {% endblocktranslate %}
 <pre>{
   "objects": [
