Update accessibility issues in the accessibility statement

--- a/templates/accessibility_issues_fi.html
+++ b/templates/accessibility_issues_fi.html
@@ -12,12 +12,11 @@
 		Erillisen sivun voi avata lukumateriaalin sivulta, kun navigoit upotetun tehtävän kehyksen kohdalle.
 		Linkki erilliselle sivulle sijaitsee kehyksen yläpuolella ja se tulee näkyville vasta kun se on fokusoitu näppäimistöllä.
 	</li>
-	<li><strong>Joistakin käyttöliittymän osista (erityisesti lomakkeissa) puuttuvat nimilaput tai nimilaput ovat epäselviä.</strong> Erityisesti tehtävien tiedostolatauslomakkeissa ei välttämättä ole uniikkeja ID-attribuutteja.</li>
-	<li><strong>Linkeissä on väärä rooli.</strong> Erityisesti kurssin etusivulla on linkki (teksti "Näytä vanhemmat tehtävät"), joka paljastaa vanhat kurssimoduulit. Linkillä pitäisi olla painikkeen rooli, koska se muokkaa saman sivun näkyvää sisältöä.</li>
-	<li><strong>Tekstin kokoa ei voi luotettavasti muuttaa selainasetuksista.</strong> Ainakin kurssisivun Pistetilanne-osion pistetaulukon sisältö vuotaa taulukon ulkopuolelle, kun tekstin kokoa kasvattaa selaimen asetuksista.</li>
+	<li><strong>Joistakin käyttöliittymän osista (erityisesti lomakkeissa) puuttuvat nimilaput tai nimilaput ovat epäselviä.</strong> Erityisesti tehtävien palautuslomakkeissa ei välttämättä ole uniikkeja ID-attribuutteja. Olemme kuitenkin korjanneet jo useimmat näistä ongelmista.</li>
+	<li><strong>Tekstin kokoa ei voi luotettavasti muuttaa selainasetuksista.</strong> Ainakin kurssisivun Omat pisteesi -osion pistetaulukon sisältö vuotaa taulukon ulkopuolelle, kun tekstin kokoa kasvattaa selaimen asetuksista.</li>
 	<li>Sisällön osien kieltä ei aina pysty määrittelemään ohjelmallisesti. (Koko sivun kielen yleensä pystyy määrittelemään.)</li>
 </ul>
 
 <p>Lisätietoja on saatavilla <a href="https://apluslms.github.io/accessibility-audit/">itsearvion raportissa</a>, joka tehtiin kesällä 2020. </p>
 <p>Korjaamme havaitut ongelmat viipymättä.</p>
-<p>Tämä tiivistelmä päivitettiin viimeksi tammikuussa 2021.</p>
+<p>Tämä tiivistelmä päivitettiin viimeksi kesäkuussa 2022.</p>
